service.yml
apiVersion: v1
kind: Service
metadata:
  # name: server-service
  name: server-service
spec:
  type: ClusterIP # Exposes the service on a cluster-internal IP
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8888 # Port that the service will listen on
      # targetPort: 3000 # Port that the pod accepts traffic on


# kubectl port-forward service/server-service 3000:8888
# for i in $(seq 10); do curl -s http://localhost:3000/ | jq .HOSTNAME ;done

# TODO: ver porque no esta redirigiendo a todos los pods (solo a uno)
